Download Drop Down Highlight Doesn't Stay

The highlight animations for download item views was being posted to a
non-nested loop. This allowed them to clear after returning from a blocking
menu call.

Menus do not block now. Updating the animations to register a callback
with DownloadShelfContextMenuView so that they can clear the highlight
once the menu has closed.

TEST=manually test download visuals
BUG=642672

Review-Url: https://codereview.chromium.org/2295323002
Cr-Commit-Position: refs/heads/master@{#415778}

Former-commit-id: 45988867f91690d8ff0d68ce52e171bf74944926