chrome/browser/ui/views/download/download_shelf_context_menu_view.h
@@ -39,11 +39,12 @@ class DownloadShelfContextMenuView : public DownloadShelfContextMenu {
   // The menu will be positioned above or below but not overlapping |rect|.
   void Run(views::Widget* parent_widget,
            const gfx::Rect& rect,
-           ui::MenuSourceType source_type);
+           ui::MenuSourceType source_type,
+           const base::Closure& on_menu_closed_callback);
 
  private:
   // Callback for MenuModelAdapter
-  void OnMenuClosed();
+  void OnMenuClosed(const base::Closure& on_menu_closed_callback);
 
   std::unique_ptr<views::MenuModelAdapter> menu_model_adapter_;
   std::unique_ptr<views::MenuRunner> menu_runner_;
